changed template for 2021

--- a/templates/api/base.html
+++ b/templates/api/base.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+      <meta charset="utf-8" />
 
-  <title>Cerebro Backend</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-  <style>
-      .center {
-            padding:100px 0;
-            font-size: 50px;
-      }
-      body {
-            background-color:#0e2433;
-            color:white;
-            text-align: center;
-      }
-      p.sansserif {
-            font-family: Arial, Helvetica, sans-serif;
-      }
+      <title>Cerebro Backend 2021</title>
+      <meta name="description" content="The HTML5 Herald" />
+      <meta name="author" content="SitePoint" />
+      <style>
+            .center {
+                  padding: 100px 0;
+                  font-size: 50px;
+            }
 
-  </style>
-<!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-<link rel="icon" href="/rocket.ico" />
+            body {
+                  background-color: #0e2433;
+                  color: white;
+                  text-align: center;
+            }
 
+            p.sansserif {
+                  font-family: Arial, Helvetica, sans-serif;
+            }
+      </style>
+      <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+      <link rel="icon" href="/rocket.ico" />
 </head>
 
 <body class="center">
-<!--  <script src="js/scripts.js"></script> -->
-<p class="sansserif"><b>Welcome to Cerebro Backend</b></p>
-
+      <!--  <script src="js/scripts.js"></script> -->
+      <p class="sansserif"><b>Welcome to Cerebro Backend</b></p>
 </body>
+
 </html>
